refactor(create-dialog): styles

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,5 +25,31 @@
     "DELETE": "Delete",
     "ABOUT": "About",
     "SETTINGS":"Settings"
+  },
+  "DIALOG": {
+    "ADD": "Add",
+    "EDIT": "Edit",
+    "DELETE": "Delete",
+    "CATEGORY": "Category",
+    "BUTTONS": {
+      "ADD": "Add",
+      "EDIT": "Edit",
+      "DELETE": "Delete",
+      "CANCEL": "Cancel"
+    },
+    "FIELDS": {
+      "NAME": "Name",
+      "CATEGORY": "Category",
+      "ILLUSTRATION": "Illustration"
+    }
+  },
+  "ILLUSTRATIONS": {
+      "ENGINE": "Engine",
+      "BATTERY": "Battery",
+      "WHEEL": "Wheel",
+      "OIL": "Oil",
+      "TRANSMISSION": "Transmission",
+      "HEADLIGHTS": "Headlights",
+      "OTHER": "Other"
   }
 }
