--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -35,7 +35,11 @@
   "DIALOG": {
     "ADD": "Добавление",
     "EDIT": "Редактирование",
-    "DELETE": "Удаление",
+    "DELETE": {
+      "TITLE": "Удаление",
+      "CATEGORY": "Удалить категорию",
+      "RECORD": "Удалить запись"
+    },
     "CATEGORY": "Категории",
     "BUTTONS": {
       "ADD": "Добавить",
