--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -46,6 +46,7 @@
       "RECORD": "Удалить запись"
     },
     "CATEGORY": "Категории",
+    "RECORD": "Записи",
     "BUTTONS": {
       "ADD": "Добавить",
       "EDIT": "Сохранить",
@@ -55,7 +56,20 @@
     "FIELDS": {
       "NAME": "Имя",
       "CATEGORY": "Категория",
-      "ILLUSTRATION": "Иллюстрация"
+      "ILLUSTRATION": "Иллюстрация",
+      "MILEAGE": "Пробег",
+      "DATE": "Дата",
+      "EXPENSE": "Расход",
+      "COMMENT": "Заметка"
+    },
+    "VALIDATIONS": {
+      "NAME": "Введите Имя.",
+      "DATE": "Введите корректную дату.",
+      "EXPENSE": {
+        "REQIRED": "Введите расход."
+      },
+      "NUMBER": "Введите числовое значение.",
+      "POSITIVE": "Введите неотрицательное значение."
     }
   },
   "ILLUSTRATIONS": {
