--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -38,7 +38,10 @@
     "ADD": "Добавление",
     "EDIT": "Редактирование",
     "RELEASE_NOTES": {
-      "TITLE": "Версия"
+      "TITLE": "Версия",
+      "NEW_FEATURES": "Добавленный функционал",
+      "BUGFIXES": "Исправленные ошибки",
+      "IMPROVEMENTS": "Улучшения"
     },
     "DELETE": {
       "TITLE": "Удаление",
