feat(navigation-component): what's new button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,7 +32,8 @@
     "DELETE": "Delete",
     "ABOUT": "About",
     "GITHUB": "GitHub",
-    "SETTINGS":"Settings"
+    "SETTINGS":"Settings",
+    "WHATS_NEW": "What's new"
   },
   "DIALOG": {
     "ADD": "Add",
