--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -32,7 +32,8 @@
     "DELETE": "Удалить",
     "ABOUT": "О приложении",
     "GITHUB": "GitHub",
-    "SETTINGS":"Настройки"
+    "SETTINGS":"Настройки",
+    "WHATS_NEW": "Что нового"
   },
   "DIALOG": {
     "ADD": "Добавление",
