refactor(settings): structure

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
       "SECTIONS": {
         "COMMON": "Common",
         "LANG": "Language & Region",
-        "APPEARANCE": "Appearence"
+        "APPEARANCE": "Appearance"
       },
       "FIELDS": {
         "LANG": "Language",
