feat(translation): update settings

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,6 +26,9 @@
       },
       "ICONS_PACK_NAMES": {
         "DEFAULT": "Default"
+      },
+      "BUTTONS": {
+        "CHANGE": "Change"
       }
     },
     "EMPTY": {
