--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -26,6 +26,9 @@
         },
         "ICONS_PACK_NAMES": {
           "DEFAULT": "Стандартные"
+        },
+        "BUTTONS": {
+          "CHANGE": "Изменить"
         }
       },
       "EMPTY": {
