--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,9 +1,15 @@
 {
   "PAGES": {
+    "WELCOME": {
+      "SUBTITLE": "Создавай. Организовывай. Планируй.",
+      "BUTTONS": {
+        "GET_STARTED": "Начать"
+      }
+    },
     "DATABASE_SELECT": {
-      "TEXT": "База данных отсутствует",
+      "TEXT": "Создайте или выберите существующую базу данных",
       "CREATE": "Создать",
-      "OPEN": "Открыть"
+      "OPEN": "Выбрать"
   },
       "DETAIL": {
         "EMPTY": "Записи отсутствуют",
