feat(app): add new icons

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -103,7 +103,10 @@
       "OIL": "Oil",
       "TRANSMISSION": "Transmission",
       "HEADLIGHTS": "Headlights",
-      "OTHER": "Other"
+      "OTHER": "Other",
+      "BRAKEBLOCK": "Brake block",
+      "SPARK": "Spark",
+      "WINDSHIELD": "Windshield"
   },
   "FEEDBACK_TYPES": {
     "BUG": "Bug",
