feat(app): print dialog

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -31,7 +31,8 @@
         "ICONS": "Icons",
         "MONO": "Mono",
         "CURRENCY": "Currency",
-        "METRIC_SYSTEM": "Metric system"
+        "METRIC_SYSTEM": "Metric system",
+        "ANIMATION": "Animations"
       },
       "ICONS_PACK_NAMES": {
         "DEFAULT": "Default"
