--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -43,6 +43,12 @@
       },
       "EMPTY": {
         "TEXT": "Выберите Категорию"
+      },
+      "PDF_EXPORT": {
+        "CONFIGURATIONS": "Настройки",
+        "PATH": "Путь для сохранения",
+        "ORDER_AND_VISIBILITY": "Порядок и отображение",
+        "PREVIEW": "Предпросмотр"
       }
   },
   "MENU": {
@@ -77,6 +83,8 @@
       "EDIT": "Сохранить",
       "DELETE": "Удалить",
       "CANCEL": "Отмена",
+      "CHANGE": "Изменить",
+      "EXPORT": "Экспорт",
       "SUBMIT": "Отправить"
     },
     "FIELDS": {
