--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -48,7 +48,10 @@
         "CONFIGURATIONS": "Настройки",
         "PATH": "Путь для сохранения",
         "ORDER_AND_VISIBILITY": "Порядок и отображение",
-        "PREVIEW": "Предпросмотр"
+        "PREVIEW": "Предпросмотр",
+        "OTHER": "Другие",
+        "SHOW_TOTAL_SUM": "Показать затраты для таблиц",
+        "TOTAL": "Итог"
       }
   },
   "MENU": {
