--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -52,6 +52,12 @@
         "OTHER": "Другие",
         "SHOW_TOTAL_SUM": "Показать затраты для таблиц",
         "TOTAL": "Итог"
+      },
+      "NAVIGATION": {
+        "TABS": {
+          "CATEGORIES": "Категории",
+          "CARS": "Автомобили"
+        }
       }
   },
   "MENU": {
@@ -96,6 +102,11 @@
       "ILLUSTRATION": "Иллюстрация",
       "MILEAGE": "Пробег",
       "DATE": "Дата",
+      "YEAR": "Год выпуска",
+      "MAKE": "Марка",
+      "MODEL": "Модель",
+      "VEHICLE_ID": "Идентификатор автомобиля",
+      "ENGINE": "Двигатель",
       "EXPENSE": "Расход",
       "COMMENT": "Заметка",
       "TEXT": "Текст",
@@ -109,6 +120,9 @@
       },
       "NUMBER": "Введите числовое значение.",
       "POSITIVE": "Введите неотрицательное значение."
+    },
+    "TOOLTIPS": {
+      "CAR_MILEAGE": "Пробег будет применен в таблицах"
     }
   },
   "ILLUSTRATIONS": {
