--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -58,6 +58,25 @@
           "CATEGORIES": "Категории",
           "CARS": "Автомобили"
         }
+      },
+      "CATEGORY_DETAILS": {
+        "WIDGETS": {
+          "INFO": "Информация",
+          "NOTE": "Заметка",
+          "MILEAGE": "Пробег",
+          "OVERALL_EXPENSE": "Общие затраты"
+        },
+        "LABELS": {
+          "YEAR": "Год выпуска",
+          "MAKE": "Марка",
+          "MODEL": "Модель",
+          "VEHICLE_ID": "ID автомобиля",
+          "ENGINE": "Двигатель"
+        },
+        "TOOLTIPS": {
+          "OVERALL_EXPENSE": "Затраты за все время обслуживания.\n Расчитывается из данных в таблицах.",
+          "MILEAGE": "Пробег автомобиля.\n Значение будет автоматически вставлено в поле 'Пробег' при создании записи."
+        }
       }
   },
   "MENU": {
@@ -68,7 +87,9 @@
     "GITHUB": "GitHub",
     "SETTINGS":"Настройки",
     "WHATS_NEW": "Что нового",
-    "FEEDBACK": "Обратная связь"
+    "FEEDBACK": "Обратная связь",
+    "CAR": "Автомобиль",
+    "CATEGORY": "Категория"
   },
   "DIALOG": {
     "ADD": "Добавление",
@@ -86,6 +107,10 @@
       "RECORD": "Удалить запись"
     },
     "CATEGORY": "Категории",
+    "CAR": "Автомобиля",
+    "COMMON": "Общие",
+    "INFO": "Информация",
+    "PARTS": "Автозапчасти",
     "RECORD": "Записи",
     "BUTTONS": {
       "ADD": "Добавить",
@@ -122,7 +147,7 @@
       "POSITIVE": "Введите неотрицательное значение."
     },
     "TOOLTIPS": {
-      "CAR_MILEAGE": "Пробег будет применен в таблицах"
+      "CAR_PARTS": "Запчасти, которые вы будете обслуживать"
     }
   },
   "ILLUSTRATIONS": {
